INGRESS-MYown-with-DOMAIN-armhack.in/hotstar_app.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotstar
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: hotstar
  template:
    metadata:
      labels:
        app: hotstar
    spec:
      containers:
        - name: greencon
          image: armcool004/hotstar:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hotstar-svc
spec:
  type: ClusterIP
  selector:
    app: hotstar
  ports:
    - port: 80
      targetPort: 3000
