INGRESS-MYown-with-DOMAIN-armhack.in/java_app.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: greenwala
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
        - name: greencon
          image: armcool004/green
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "200m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  type: ClusterIP
  selector:
    app: green
  ports:
    - port: 80
      targetPort: 8080
