INGRESS-MYown-with-DOMAIN-armhack.in/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: www.armhack.in
    http:
      paths:
      - path: /maven-cloudaseem-app
        pathType: ImplementationSpecific
        backend:
          service:
            name: green-svc
            port:
              number: 80
      - path: /app2
        pathType: ImplementationSpecific
        backend:
          service:
            name: hotstar-svc
            port:
              number: 80    # ✅ fix kiya
